# GPS-Tracker

./: .gitignore  CLAUDE.md  README.md  TODO.md  architecture.md
docs/: arduino-nano-esp32-user-manual.md  build-roadmap.md  component-ble-crowdsourced.md  component-cellular-gps.md  component-power.md  component-reporting.md  findmy-endpoint-setup.md  shopping-list.md
firmware/ble-beacon/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/ble-beacon/components/apple_find_my/: CMakeLists.txt  apple_find_my.c
firmware/ble-beacon/components/apple_find_my/include/: apple_find_my.h
firmware/ble-beacon/host_test/: CMakeLists.txt
firmware/ble-beacon/host_test/main/: CMakeLists.txt  test_apple_find_my.c
firmware/ble-beacon/main/: CMakeLists.txt  ble_beacon_main.c
firmware/hello-world/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/hello-world/components/banner/: CMakeLists.txt  banner.c
firmware/hello-world/components/banner/include/: banner.h
firmware/hello-world/host_test/: CMakeLists.txt
firmware/hello-world/host_test/main/: CMakeLists.txt  test_banner.c
firmware/hello-world/main/: CMakeLists.txt  hello_world_main.c
firmware/test/: CMakeLists.txt  test_apple_find_my.c  test_banner.c
tools/: watch-com-ports.ps1
